--- a/app/src/pages/demo/App.css
+++ b/app/src/pages/demo/App.css
@@ -3,8 +3,13 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 11vmin;
   pointer-events: none;
+}
+
+.App-header {
+  display: flex;
+  flex-direction: column;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -19,9 +24,24 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.App-title-container {
+  display: flex;
+  flex-direction: row;
+  margin-top: calc(10px + 1vmin);
+}
+
+.App-title {
+  margin: auto;
+}
+
+.App-description {
+  font-size: calc(5px + 1.5vmin);
+  margin-top: calc(10px + 1vmin);
+  margin-bottom: calc(10px + 1vmin);
 }
 
 .App-link {
