--- a/app/src/components/form/form.css
+++ b/app/src/components/form/form.css
@@ -1,4 +1,47 @@
-.form-container {
+.form-overall-container {
     width: 100%;
-    min-height: 100vh;
+}
+
+.form-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.input-container {
+    margin: 10px;
+    align-items: center;
+    display: flex;
+    width: 40%;
+    justify-content: center;
+    background-color: grey;
+}
+
+.input-container > input {
+    outline: none;
+    width: 100%;
+    height: 20px;
+    color: black;
+}
+
+.input-container > select {
+    width: 100%;
+    height: 25px;
+    color: black;
+    outline: none;
+}
+
+.error-message-container {
+    color: #ff0000;
+    font-size: 20px;
+    margin: 10px;
+}
+
+.buttons-container {
+    display: flex;
+}
+
+.buttons-container > .submit-button {
+    margin: 10px;
 }
